--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "bootstrap": "^5.3.0-alpha1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "yup": "^1.0.2",
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
