--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "timer-node": "^5.0.7",
     "yup": "^1.0.2",
     "yup-password": "^0.2.2"
   },
